--- a/common.css
+++ b/common.css
@@ -21,6 +21,7 @@ body::-webkit-scrollbar{
     flex-wrap: wrap;
     max-width: 100%;
     min-height: 80%;
+    margin-bottom: 20px;
 }
 
 
@@ -29,7 +30,7 @@ body::-webkit-scrollbar{
     height: 30vw;
 }
 
-.square-box {
+.demo-flex-box {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,6 +38,11 @@ body::-webkit-scrollbar{
     margin: 4px;
     border-radius: 10px;
     padding: 5px;
+}
+
+.square-box {
+    width: 10vw;
+    height: 10vw;
 }
 
 .greenyellow-background {
@@ -59,6 +65,13 @@ body::-webkit-scrollbar{
     background-color: #9e9a99;
 }
 
+.h-0, .wh-0 {
+    height: 0%;
+}
+
+w-0, .wh-0 {
+    width: 0%;
+}
 
 .h-5, .wh-5 {
     height: 5%;
