--- a/flex-box.css
+++ b/flex-box.css
@@ -8,23 +8,23 @@
     flex-grow: 2;
 }
 
-input[id="flex-grow-1"]:checked ~ .demo-container #flex-grow-one {
+input[id="flex-grow-1"]:checked ~ .demo-container-flexbox #flex-grow-one {
     flex-grow: 1
 }
 
-input[id="flex-grow-2"]:checked ~ .demo-container #flex-grow-one {
+input[id="flex-grow-2"]:checked ~ .demo-container-flexbox #flex-grow-one {
     flex-grow: 2
 }
 
-input[id="flex-grow-2"]:checked ~ .demo-container #flex-grow-one::before {
+input[id="flex-grow-2"]:checked ~ .demo-container-flexbox #flex-grow-one::before {
     content: 'Flex grow 2'
 }
 
-input[id="flex-grow-3"]:checked ~ .demo-container #flex-grow-one {
+input[id="flex-grow-3"]:checked ~ .demo-container-flexbox #flex-grow-one {
     flex-grow: 8
 }
 
-input[id="flex-grow-3"]:checked ~ .demo-container #flex-grow-one::before {
+input[id="flex-grow-3"]:checked ~ .demo-container-flexbox #flex-grow-one::before {
     content: 'Flex grow 8'
 }
 
@@ -43,30 +43,32 @@ input[id="flex-grow-3"]:checked ~ .demo-container #flex-grow-one::before {
 .my-flex-shrink-1 {
     flex-shrink: 1;
     flex-grow: 1;
+    flex-basis: 100%;
 }
 
 .my-flex-shrink-2 {
     flex-shrink: 2;
     flex-grow: 1;
+    flex-basis: 100%;
 }
 
-input[id="flex-shrink-1"]:checked ~ .demo-container #flex-shrink-one {
+input[id="flex-shrink-1"]:checked ~ .demo-container-flexbox #flex-shrink-one {
     flex-shrink: 1
 }
 
-input[id="flex-shrink-2"]:checked ~ .demo-container #flex-shrink-one {
+input[id="flex-shrink-2"]:checked ~ .demo-container-flexbox #flex-shrink-one {
     flex-shrink: 2
 }
 
-input[id="flex-shrink-2"]:checked ~ .demo-container #flex-shrink-one::before {
+input[id="flex-shrink-2"]:checked ~ .demo-container-flexbox #flex-shrink-one::before {
     content: 'Flex shrink 2'
 }
 
-input[id="flex-shrink-3"]:checked ~ .demo-container #flex-shrink-one {
+input[id="flex-shrink-3"]:checked ~ .demo-container-flexbox #flex-shrink-one {
     flex-shrink: 8
 }
 
-input[id="flex-shrink-3"]:checked ~ .demo-container #flex-shrink-one::before {
+input[id="flex-shrink-3"]:checked ~ .demo-container-flexbox #flex-shrink-one::before {
     content: 'Flex shrink 8'
 }
 
@@ -86,24 +88,61 @@ input[id="flex-shrink-3"]:checked ~ .demo-container #flex-shrink-one::before {
     flex-basis: 10;
 }
 
-input[id="flex-basis-1"]:checked ~ .demo-container #flex-basis-one {
+input[id="flex-basis-1"]:checked ~ .demo-container-flexbox #flex-basis-one {
     flex-basis: 50%
 }
 
-    input[id="flex-basis-1"]:checked ~ .demo-container #flex-basis-one::before {
-        content: 'Flex basis 50%'
-    }
+input[id="flex-basis-1"]:checked ~ .demo-container-flexbox #flex-basis-one::before {
+    content: 'Flex basis 50%'
+}
 
-input[id="flex-basis-2"]:checked ~ .demo-container #flex-basis-one {
+input[id="flex-basis-2"]:checked ~ .demo-container-flexbox #flex-basis-one {
     flex-basis: 100%
 }
 
-    input[id="flex-basis-2"]:checked ~ .demo-container #flex-basis-one::before {
-        content: 'Flex basis 100%'
-    }
+input[id="flex-basis-2"]:checked ~ .demo-container #flex-basis-one::before {
+    content: 'Flex basis 100%'
+}
 
 #flex-basis-one::before {
     content: 'Flex basis 0%'
+}
+
+/***************************************************************/
+
+/***************************Flex***************************/
+
+
+input[id="flex-1"]:checked ~ .demo-container-flexbox #flex-one {
+    flex: 0 0 20%;
+}
+
+input[id="flex-1"]:checked ~ .demo-container-flexbox #flex-two {
+    flex: 0 0 20%;
+}
+
+input[id="flex-2"]:checked ~ .demo-container-flexbox #flex-one {
+    flex: 1 0 20%;
+}
+
+input[id="flex-2"]:checked ~ .demo-container-flexbox #flex-two {
+    flex: 0 0 20%;
+}
+
+input[id="flex-3"]:checked ~ .demo-container-flexbox #flex-one {
+    flex: 0 0 100%;
+}
+
+input[id="flex-3"]:checked ~ .demo-container-flexbox #flex-two {
+    flex: 0 0 100%;
+}
+
+input[id="flex-4"]:checked ~ .demo-container-flexbox #flex-one {
+    flex: 0 1 100%;
+}
+
+input[id="flex-4"]:checked ~ .demo-container-flexbox #flex-two {
+    flex: 0 2 100%;
 }
 
 /***************************************************************/
@@ -179,3 +218,36 @@ input[id="align-items-4"]:checked ~ .align-items {
     align-items: baseline;
 }
 /***************************************************************/
+
+
+#flex-grow-1:checked + label,
+#flex-grow-2:checked + label,
+#flex-grow-3:checked + label,
+#flex-shrink-1:checked + label,
+#flex-shrink-2:checked + label,
+#flex-shrink-3:checked + label,
+#flex-basis-1:checked + label,
+#flex-basis-2:checked + label,
+#flex-1:checked + label,
+#flex-2:checked + label,
+#flex-3:checked + label,
+#flex-4:checked + label,
+#flex-direction-1:checked + label,
+#flex-direction-2:checked + label,
+#flex-direction-3:checked + label,
+#flex-direction-4:checked + label,
+#flex-wrap-1:checked + label,
+#flex-wrap-2:checked + label,
+#flex-wrap-3:checked + label,
+#justify-content-1:checked + label,
+#justify-content-2:checked + label,
+#justify-content-3:checked + label,
+#justify-content-4:checked + label,
+#align-items-1:checked + label,
+#align-items-2:checked + label,
+#align-items-3:checked + label,
+#align-items-4:checked + label {
+    color: red;
+    font-size: 1.5em;
+    font-weight: bold;
+}
