--- a/css-units.css
+++ b/css-units.css
@@ -1,7 +1,30 @@
-.demo-container-flexbox{
-    display: flex;
-    height: 10%;
+.demo-content {
+    margin-top: 20px;
+    border: 3px solid var(--theme-fontcolor);
+    border-radius: 15px;
+    padding: 5px;
 }
+
+.demo-header{
+    margin: 5px;
+}
+
+.demo-paragraph {
+    font-size: 25px;
+}
+
+.demo-header:before {
+    content: "This is the Header of 50px";
+    font-size: 50px;
+}
+
+.demo-paragraph:before {
+    content: "This is a content paragraph which has font size 25px. \A Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.";
+    font-size: 25px;
+    white-space: pre-wrap;
+}
+
+
 
 .font-size-18 {
     font-size: 18px;
@@ -14,10 +37,6 @@
 .container-css-units {
     font-size: 1em;
     width: 100%;
-}
-
-.demo-html-root{
-
 }
 
 .div-css-units {
@@ -39,51 +58,51 @@
 .div-css-unit2::before {
     content: "This is the body of the web page and its font size is 18px";
     font-size: 18px;
+}*/
+#relative-css-units-1:checked ~ .demo-container .demo-content {
+    width: 50%;
+}
+
+#relative-css-units-2:checked ~ .demo-container .demo-header:before {
+    content: "This is the Header of 2em";
+    font-size: 2em;
+}
+
+#relative-css-units-2:checked ~ .demo-container .demo-paragraph:before {
+    content: "This is a content paragraph which has font size 1em.\A Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.";
+    font-size: 1em;
+}
+
+#relative-css-units-2:checked ~ .demo-container .demo-content{
+    font-size: 25px;
 }
 
 
-#relative-css-units-1:checked ~ .demo-container .div-css-units {
-    width: 100%;
+#relative-css-units-3:checked ~ .demo-container .demo-header:before {
+    content: "This is the Header of 2rem, that's 36px";
+    font-size: 2rem;
 }
 
-#relative-css-units-2:checked ~ .demo-container .div-css-unit1:before {
-    content: "Header font size is now 1.5 em";
-    font-size: 1.5em;
-}
-#relative-css-units-2:checked ~ .demo-container .div-css-unit2:before {
-    content: "This is the body of the web page and its font size is now 0.7 em";
-    font-size: 0.7em;
-}
-
-#relative-css-units-8:checked ~ .container-css-units{
-    font-size: 18px;
-}
-
-#relative-css-units-9:checked ~ .container-css-units {
-    font-size: 27px;
-}
-
-
-#relative-css-units-3:checked ~ .demo-container .div-css-units:before {
-    content: "Font size changed to 1rem";
+#relative-css-units-3:checked ~ .demo-container .demo-paragraph:before {
+    content: "This is a content paragraph which has font size 1rem, that's 18px.\A Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.";
     font-size: 1rem;
 }
 
 
-#relative-css-units-4:checked ~ .demo-container .div-css-units {
-    width: 30vw;
+#relative-css-units-4:checked ~ .demo-container .demo-content {
+    width: 30%;
 }
 
-#relative-css-units-5:checked ~ .demo-container .div-css-units {
-    height: 30vh;
+#relative-css-units-5:checked ~ .demo-container .demo-content {
+    height: 30%;
 }
 
-#relative-css-units-6:checked ~ .demo-container .div-css-units {
-    width: 30vmin;
+#relative-css-units-6:checked ~ .demo-container .demo-content {
+    width: 20%;
 }
 
-#relative-css-units-7:checked ~ .demo-container .div-css-units {
-    width: 30vmax;
+#relative-css-units-7:checked ~ .demo-container .demo-content {
+    width: 30%;
 }
 
 #relative-css-units-1:checked ~ div label[for="relative-css-units-1"],
@@ -95,11 +114,5 @@
 #relative-css-units-7:checked ~ div label[for="relative-css-units-7"] {
     color: red;
     font-size: 1.5em;
-    font-weight: bold;
-}
-
-#relative-css-units-8:checked ~ div label[for="relative-css-units-8"],
-#relative-css-units-9:checked ~ div label[for="relative-css-units-9"] {
-    color: red;
     font-weight: bold;
 }
